policies/kyverno/disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest
  annotations:
    policies.kyverno.io/title: Disallow latest tag
    policies.kyverno.io/category: Security
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod, Deployment
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: require-pinned-image-tag-deployment
      match:
        any:
          - resources:
              kinds:
                - Deployment
              namespaceSelector:
                matchLabels:
                  kubernetes.io/metadata.name: demo
      validate:
        message: "Images must not use the latest tag. Pin to a specific version."
        pattern:
          spec:
            template:
              spec:
                containers:
                  - image: "!*:latest"

    - name: require-pinned-image-tag-pod
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaceSelector:
                matchLabels:
                  kubernetes.io/metadata.name: demo
      validate:
        message: "Images must not use the latest tag. Pin to a specific version."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
